# Rumor

./: CMakeLists.txt  README.md
Header Files/: Application.h  Automaton.h  Person.h  Random.h  Rumor.h
Source Files/: Application.cpp  Automaton.cpp  Person.cpp  Random.cpp  main.cpp
